--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -18,7 +19,11 @@
 .env.test.local
 .env.production.local
 .idea/
-.idea/workspace.xml
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#electronjs main process
+public/electron.js
+public/main_src
+
