--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "main": "public/electron.js",
   "dependencies": {
-    "electron-is-dev": "^2.0.0"
+    "electron-is-dev": "^2.0.0",
+    "electron-squirrel-startup": "^1.0.0"
   },
   "homepage": "./",
   "build": {
@@ -20,11 +21,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "compile-electron": "tsc --project main_process/tsconfig.json",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron-dev": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
-    "electron-pack": "electron-builder",
-    "preelectron-pack": "npm run build"
+    "electron-dev": "concurrently \"BROWSER=none npm start\"  \"tsc --project main_process/tsconfig.json -w\"  \"wait-on http://localhost:3000  && nodemon --exec electron .\"",
+    "preelectron-pack": "npm run compile-electron && npm run build",
+    "electron-pack": "electron-builder"
   },
   "eslintConfig": {
     "extends": [
@@ -45,16 +47,19 @@
     ]
   },
   "devDependencies": {
-    "electron-builder": "^22.10.5",
-    "wait-on": "^5.3.0",
-    "concurrently": "^6.0.0",
-    "electron": "^12.0.2",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "react-scripts": "4.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
+    "concurrently": "^6.0.0",
+    "electron": "^12.0.2",
+    "electron-builder": "^22.10.5",
+    "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "wait-on": "^5.3.0",
     "web-vitals": "^1.1.1"
   }
 }
