--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+package-lock.json
 /.pnp
 .pnp.js
 
@@ -11,6 +12,7 @@
 # production
 /build
 /dist
+
 
 # misc
 .DS_Store
@@ -25,5 +27,5 @@ yarn-error.log*
 
 #electronjs main process
 public/electron.js
-public/main_src
+public/src
 
