--- a/package.json
+++ b/package.json
@@ -44,18 +44,21 @@
         "@testing-library/jest-dom": "^5.11.10",
         "@testing-library/react": "^11.2.6",
         "@testing-library/user-event": "^12.8.3",
-        "@typescript-eslint/eslint-plugin": "^4.20.0",
-        "@typescript-eslint/parser": "^4.20.0",
+        "@types/react": "^17.0.3",
+        "@types/react-dom": "^17.0.3",
         "concurrently": "^6.0.0",
         "electron": "^12.0.2",
         "electron-builder": "^22.10.5",
-        "eslint-config-prettier": "^8.1.0",
         "nodemon": "^2.0.7",
         "prettier": "2.2.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
         "wait-on": "^5.3.0",
-        "web-vitals": "^1.1.1"
+        "web-vitals": "^1.1.1",
+        "tslint": "6.1.3",
+        "tslint-config-prettier": "1.18.0",
+        "tslint-react": "5.0.0",
+        "typescript": "^4.2.3"
     }
 }
